# my-gpiosys

./: Readme.md
src/: .gitignore  CMakeLists.txt  Makefile  build.sh  main.c  rk_gpio.c  rk_gpio.h  test.c
src/platform/: rk_gpio.c  rk_gpio.h  zynq_gpio.c  zynq_gpio.h
src/utils/: dir.c  dir.h  str.c  str.h
